# kgp-control

./: .gitignore  AuthServer.cpp  AuthServer.h  BackupManager.cpp  BackupManager.h  BaseManager.cpp  BaseManager.h  CMakeLists.txt  Config.h.in  ConnTest.cpp  ConnTest.h  ControlApp.cpp  ControlApp.h  ControlState.cpp  ControlState.h  CryptoHelper.cpp  CryptoHelper.h  Debug.cpp  Debug.h  DiskHelper.cpp  DiskHelper.h  DnsServer.cpp  DnsServer.h  EventHandler.h  HttpClient.cpp  HttpClient.h  IdentityManager.cpp  IdentityManager.h  InboundTest.cpp  InboundTest.h  LedControl.cpp  LedControl.h  Luks.cpp  Luks.h  PasswordFile.cpp  PasswordFile.h  README.md  Secop.cpp  Secop.h  ServiceHelper.cpp  (+9 more)
debian/: README  changelog  control  copyright  files  init.d  install  opi-control.default  opi-control.lintian-overrides  opi-control.service  postinst  rules
html/: index.html  opiname.html
html/css/: app.css  init.css
html/js/: helptexts.js  jquery.qtip.min.js
html/themes/example/css/: app.css
pwdctrl/: CMakeLists.txt  PwdCtrlApp.cpp  PwdCtrlApp.h  main.cpp
scripts/completed/: readme.txt
scripts/reinit/: readme.txt
scripts/reinstall/: readme.txt
scripts/restore/: readme.txt
